# viso

./: .gitignore  CMakeLists.txt  README.md
python/: eval_cnn_output.txt  eval_sad_output.txt  roc_curve.py
src/: ConvMatcher.cpp  FeatureExtractor.cpp  OrbMatcher.cpp  evaluate_cnn_metric.cpp  main.cpp  main_features.cpp  main_slerp.cpp
src/conv/: CMakeLists.txt  ConvNetwork.cpp  ConvNetwork.h  FeatureExtractor.h  ImageDescriptor.h
src/egomotion/: CMakeLists.txt  Egomotion.cpp  Egomotion.h  slerp.cpp  util.cpp  util.h  viso_stereo_seperate.h
src/evaluation/: evaluate_cnn_metric.cpp  evaluate_sad_metric.cpp
src/headers/: ConvMatcher.h  CustomDetectorConvMatcher.h  FeatureExtractor.h  OrbMatcher.h
src/lib/: matcher.cpp  util.cpp  viso_stereo_seperate.cpp
src/lib/headers/: matcher.h  slerp.h  util.h  viso.h  viso_stereo_seperate.h
src/libviso/: CMakeLists.txt  matcher.cpp  matcher.h  viso.cpp  viso_stereo.cpp  viso_stereo.h
src/main/: CMakeLists.txt
src/main/conv_egomotion/: CMakeLists.txt  main_features.cpp
src/main/egomotion/: CMakeLists.txt  main.cpp
src/main/egomotion_slerp/: CMakeLists.txt  main_slerp.cpp
src/main/orb_conv_egomotion/: main_orb_detector.cpp
src/matcher/: CMakeLists.txt  ConvMatcher.cpp  ConvMatcher.h  CustomDetectorConvMatcher.cpp  Detector.cpp  Detector.h  FeatureMatcher.cpp  FeatureMatcher.h  OrbMatcher.cpp  OrbMatcher.h  libviso_helper.h
trained/: 85.cpkt.data-00000-of-00001  85.cpkt.index  model.pb  model_LR.pb
